--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta name="viewport" http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lesson 2</title>
 </head>
 <body>
-<header>Тут може бути початок
+<header>
     <div class="header_div1">
         <div class="header_content">
             <h1 id="header_content_h1">
@@ -21,7 +20,7 @@
     <div class="main_content_div1">
         <p>Мене звати Юлія, мені 29. Родом з Чернігівщини <img src="img/chernigiv-top1.jpg" alt="Тут має бути гарне зображення">,
             але довгий час живу в Києві. Зараз, на жаль, не в Україні.
-            Цікавлюсь музикою, комп'ютерними іграми (додавайтесь в steam <a href="https://store.steampowered.com/" target="_blank" class="main_content_link"></a>)),
+            Цікавлюсь музикою, комп'ютерними іграми (додавайтесь в <a href="https://store.steampowered.com/" target="_blank" class="main_content_link">Steam</a>)),
             люблю подорожувати. За фахом медик (за вищою освітою - олігофренопедагог), але розчарувалась в цьому і вирішила йти в напрям <mark>IT</mark>,
             що рекомендували друзі та близькі люди.
             Починала з безкоштовних уроків <mark>Євгенія</mark> на ютубі, потім JS, а зараз хочу довести до ладу верстку.<br><span>Куди далі поки не знаю.</span>
