--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -25,7 +25,7 @@
             що рекомендували друзі та близькі люди.
             Починала з безкоштовних уроків <mark>Євгенія</mark> на ютубі, потім JS, а зараз хочу довести до ладу верстку.<br><span>Куди далі поки не знаю.</span>
         </p>
-        <div class="main_content_div2">
+        <div class="main-content_div2">
             <p class="main_content_p1">Для успішного навчання на курсі необхідно:</p>
             <ol class="main_content_ul_list">
                 <li>Уважно слухати викладача</li>
