--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 <header>
-    <div class="header_div1">
-        <div class="header_content">
-            <h1 id="header_content_h1">
+    <div class="header-div1">
+        <div class="header-content">
+            <h1 id="header-content_h1">
                 Вміст домашнього завдання №2
             </h1>
         </div>
     </div>
 </header>
 <main>
-    <div class="main_content_div1">
+    <div class="main-content-div1">
         <p>Мене звати Юлія, мені 29. Родом з Чернігівщини <img src="img/chernigiv-top1.jpg" alt="Тут має бути гарне зображення">,
             але довгий час живу в Києві. Зараз, на жаль, не в Україні.
             Цікавлюсь музикою, комп'ютерними іграми (додавайтесь в <a href="https://store.steampowered.com/" target="_blank" class="main_content_link">Steam</a>)),
