--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Lesson 5</title>
 </head>
+<body>
 <header class="header-title" id="header">
     <h1>
         Домашня робота № 5
@@ -89,7 +90,7 @@
                 від Урана серед великих його супутників. Його орбіта частково розташована за магнітосферою Урана.
             </p>
             <div class="article-block image">
-                <img src="img/oberon.jpg" alt="Oberon image">
+                <img src="img/oberon.jpg" alt="Зображення Оберону">
             </div>
             <p>
                 За одним з припущень Оберон сформувався з акреційного диску, що існував навколо Урана відразу після
@@ -137,7 +138,7 @@
                 спектрографічних спостережень було встановлено наявність на Обероні водного льоду.
             </p>
             <div class="article-block image">
-                <img width="400" src="img/oberon-vojagher.png" alt="Oberon vojagher">
+                <img width="400" src="img/oberon-vojagher.png" alt="Дослідження Оберону Вояджером-2">
             </div>
             <h4>
                 Поверхня
@@ -164,7 +165,7 @@
                 активності.
             </p>
             <div class="article-block image">
-                <img src="img/oberon-craters.png" alt="Oberon craters">
+                <img src="img/oberon-craters.png" alt="Кратери Оберону">
             </div>
             <p>Діаметр найбільшого з відомих кратерів — <span>Гамлета</span> — 206 кілометрів. Довкола багатьох
                 кратерів є світлі промені — ймовірно, викиди льоду. Дно найбільших кратерів темне. На деяких знімках
@@ -210,6 +211,5 @@
         </h4>
     </div>
 </footer>
-<body>
 </body>
 </html>
