--- a/lesson-6/index.html
+++ b/lesson-6/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Lesson 5</title>
+    <title>Lesson 6</title>
 </head>
 <body>
 <header>
@@ -16,79 +16,112 @@
     </div>
 </header>
 <main>
-    <div class="main-container">
-        <div class="main-block-image">
-            <img src="img/project-photo.svg" alt="Фото проекту">
-        </div>
-        <div class="main-block text">
-            <h2>
-                Why us for international business management consulting!
-            </h2>
-            <p>
-                Completely synergized resourced taxings relationships premiers markets ultivate one-to-one customer
-                service
-                with robust ideas dynamically innovated resources leveling customer service for state of the art
-                customer
-                service innovate product for reliable supply engage web services cutting-edge deliverables.
-            </p>
-        </div>
-        <div class="main-block-two text">
-            <span>
-            Proactively envisioned multimedia based expertise media growth  superior collaboration.
-            </span>
-            <p>
-                One-to-one customer service with robust ideas dynamically innovated resources for reliable supply engage
-                web
-                services cutting-edge deliverables.
-            </p>
-        </div>
-    </div>
-    <div class="main-block-benefit text">
-        <div class="image">
-            <img src="img/project-photo-benefit.svg" alt="Фото проекту">
-        </div>
-        <div class="content">
-            <h2>
-                Our benefits
-            </h2>
-            <h3>
-                Incubate standards compliant channels benefits.
-            </h3>
-            <ul>
-                <li>Credibly reintermediate backend</li>
-                <li>Holistically foster superior</li>
-                <li>Distinctively exploit optimal</li>
-            </ul>
-        </div>
-    </div>
-    <div class="main-block-jewellery">
-        <div class="jewellery-container">
-            <div class="jewellery-content">
-            <span>
-                WHAT WE DO
-            </span>
-                <h3>
-                    We Develop Create Custom Jewels.
-                </h3>
+    <div class="main-block-consulting">
+        <div class="main-block-container">
+            <div class="main-block-image">
+                <img src="img/project-photo.svg" alt="Фото проекту">
+            </div>
+            <div class="main-block-content text">
+                <h2>
+                    Why us for international business management consulting!
+                </h2>
                 <p>
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even slightly
-                    believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't
-                    anything
-                    embarrassing hidden in the middle of text
+                    Completely synergized resourced taxings relationships premiers markets ultivate one-to-one customer
+                    service
+                    with robust ideas dynamically innovated resources leveling customer service for state of the art
+                    customer
+                    service innovate product for reliable supply engage web services cutting-edge deliverables.
+                </p>
+            </div>
+            <div class="main-block-two text">
+            <h3>
+            Proactively envisioned multimedia based expertise media growth  superior collaboration.
+            </h3>
+                <p>
+                    One-to-one customer service with robust ideas dynamically innovated resources for reliable supply
+                    engage
+                    web
+                    services cutting-edge deliverables.
                 </p>
             </div>
         </div>
-        <div class="jewellery-image">
-            <img src="img/jewelery-one.svg" alt="Фото жінки з сережками">
-            <img src="img/jewellery-two.svg" alt="Фото прикрас">
+    </div>
+    <div class="main-block-benefit">
+        <div class="benefit-container">
+            <div class="image">
+                <img src="img/project-photo-benefit.svg" alt="Фото проекту">
+            </div>
+            <div class="benefit-content text">
+                <h2>
+                    Our benefits
+                </h2>
+                <h3>
+                    Incubate standards compliant channels benefits.
+                </h3>
+                <ul>
+                    <li>Credibly reintermediate backend</li>
+                    <li>Holistically foster superior</li>
+                    <li>Distinctively exploit optimal</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="jewellery-block">
+        <div class="jewellery-block-wrapper">
+            <div class="jewellery-container">
+                <div class="jewellery-content">
+            <span>
+                WHAT WE DO
+            </span>
+                    <h3>
+                        We Develop Create Custom Jewels.
+                    </h3>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't
+                        anything
+                        embarrassing hidden in the middle of text
+                    </p>
+                </div>
+            </div>
+            <div class="jewellery-image">
+                <div class="jewellery-image-first">
+                    <img src="img/jewelery-one.svg" alt="Фото жінки з сережками">
+                </div>
+                <div class="jewellery-image-second">
+                    <img src="img/jewellery-two.svg" alt="Фото прикрас">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="example-block">
+        <div class="example-block-container">
+            <div class="example-content">
+                <p>
+                    HTML тег <span>article</span> визначає незалежний,
+                    самодостатній зміст від іншої частини сайту.
+                    Тег <span>article</span> позначає важливі розділи контенту всередині веб-сторінки.
+                    Наприклад, в блозі кожен окремий пост являє собою значимий фрагмент контенту і саме ций
+                    контент має бути виділений за допомогою елемента <span>article</span>.
+                </p>
+                <p>Кожен елемент <span>article</span> обов'язково повинен
+                    містити заголовок через <span>h1-h6</span>.</p>
+            </div>
+        </div>
+        <div class="example-block-image">
+            <div class="example-image">
+                <img src="img/tag-article-one.png" alt="Опис до тегу article">
+            </div>
         </div>
     </div>
 </main>
 <footer>
-    <h5>
-        Кінець
-    </h5>
+    <div class="footer-title">
+        <h5>
+            Кінець домашньої роботи № 6
+        </h5>
+    </div>
 </footer>
 </body>
 </html>
