--- a/lesson-7/index.html
+++ b/lesson-7/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
 <header>
     <div class="header-title">
         <h1>
-            Домашня робота № 7
+            HOMEWORK 7
         </h1>
     </div>
 </header>
@@ -31,7 +31,7 @@
                     </h3>
                 </div>
             </div>
-            <div class="licencing-content-icons">
+            <div class="licencing-content-icons color">
                 <h3>
                     Icons & Graphics
                 </h3>
@@ -126,13 +126,13 @@
     </div>
     <div class="clothing-india-block">
         <div class="clothing-india-container">
+            <div class="clothing-india-title">
+                <div class="clothing-india-decor"></div>
+                <h3>
+                    Clothing for Women Online in India
+                </h3>
+            </div>
             <div class="clothing-india-content">
-                <div class="clothing-india-title">
-                    <div class="clothing-india-decor"></div>
-                    <h3>
-                        Clothing for Women Online in India
-                    </h3>
-                </div>
                 <h4>
                     Reexplore Women's Clothing Collection Online at Euphoria
                 </h4>
@@ -164,12 +164,356 @@
                     design that you are always seeking for. Basically,
                 </p>
                 <div class="clothing-india-link">
-                    <a href="#">See More</a>
+                    <a href="#" target="_blank">See More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="jewellery-create-block">
+        <div class="jewellery-create-container">
+            <div class="jewellery-create-content">
+                <h3>
+                    WHAT WE DO
+                </h3>
+                <h2>
+                    We Develop Create Custom Jewels.
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, conse elit, sedid do eiusmod tempor incidi ut labore et dolore magna
+                    aliqua. Quis ipsum usendi laboris mollit
+                </p>
+            </div>
+            <div class="jewellery-image-block">
+                <div class="jewellery-image-first">
+                    <img src="img/jewellery-women-one.svg" alt="Фото маленьке жінки">
+                </div>
+                <div class="jewellery-image-second">
+                    <img src="img/jewellery-women-two.svg" alt="Фото велике жінки">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="example-title-container">
+        <div class="example-title">
+            <h3>
+                Let`s play in game
+            </h3>
+        </div>
+    </div>
+    <div class="example-block">
+        <div class="example-block-container">
+            <div class="example-content-profile">
+                <h3>
+                    Tetris
+                </h3>
+                <div class="game-link">
+                    <a href="#">Play</a>
+                </div>
+                <div class="game-link">
+                    <a href="#">Highscores</a>
+                </div>
+                <div class="game-link">
+                    <a href="#">Records</a>
+                </div>
+                <div class="game-link">
+                    <a href="#">Options</a>
+                </div>
+                <h5>
+                    Tetris Corp
+                </h5>
+            </div>
+        </div>
+        <div class="example-container-game">
+            <div class="example-content-game">
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-white-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-blue-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-white-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+                <span class="cell color-blue-block"></span>
+                <span class="cell"></span>
+                <span class="cell color-yellow-block"></span>
+                <span class="cell color-yellow-block"></span>
+                <span class="cell color-white-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell color-yellow-block"></span>
+                <span class="cell color-yellow-block"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell color-white-block"></span>
+                <span class="cell color-white-block"></span>
+                <span class="cell"></span>
+                <span class="cell color-blue-block"></span>
+                <span class="cell"></span>
+                <span class="cell color-green-block"></span>
+                <span class="cell color-yellow-block"></span>
+                <span class="cell color-yellow-block"></span>
+                <span class="cell"></span>
+                <span class="cell"></span>
+
+                <span class="cell color-yellow-block"></span>
+                <span class="cell color-yellow-block"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell color-pink-block"></span>
+                <span class="cell color-white-block"></span>
+                <span class="cell color-white-block"></span>
+                <span class="cell color-green-block"></span>
+                <span class="cell color-green-block"></span>
+                <span class="cell color-green-block"></span>
+                <span class="cell color-red-block"></span>
+                <span class="cell color-red-block"></span>
+                <span class="cell color-red-block"></span>
+                <span class="cell"></span>
+            </div>
+
+        </div>
+        <div class="example-block-example">
+            <div class="example-container">
+                <div class="example-example">
+                     <span>
+                        Homework
+                     </span>
+                    <span>
+                        is
+                     </span>
+                    <span class="span-decorate-one">
+                        already
+                     </span>
+                    <span class="span-decorate-two">
+                        done!
+                     </span>
+                    <span>
+                        Thanks
+                     </span>
+                    <span class="span-decorate-three">
+                        for
+                     </span>
+                    <span>
+                        checking!
+                     </span>
                 </div>
             </div>
         </div>
     </div>
 </main>
 </body>
-<footer></footer>
+<footer>
+    <div class="footer-title">
+        <h6>
+            Finish <span>Homework</span>
+        </h6>
+    </div>
+</footer>
 </html>
