--- a/lesson-7/index.html
+++ b/lesson-7/index.html
@@ -75,8 +75,10 @@
                     Fonts
                 </h4>
                 <p>
-                    WhiteCollar template uses free licensed <span>Google Fonts</span>.
-                    Please check <span>Poppins</span> and <span>Inter</span>.
+                    WhiteCollar template uses free licensed <a href="https://fonts.google.com/" target="_blank">Google
+                    Fonts</a>.
+                    Please check <a href="https://fonts.google.com/specimen/Poppins?query=Poppins" target="_blank">Poppins</a>
+                    and <a href="https://fonts.google.com/specimen/Inter?query=Inter" target="_blank">Inter</a>.
                 </p>
             </div>
         </div>
@@ -185,10 +187,10 @@
             </div>
             <div class="jewellery-image-block">
                 <div class="jewellery-image-first">
-                    <img src="img/jewellery-women-one.svg" alt="Фото маленьке жінки">
+                    <img src="img/jewellery-women-one.svg" alt="Small picture with a woman">
                 </div>
                 <div class="jewellery-image-second">
-                    <img src="img/jewellery-women-two.svg" alt="Фото велике жінки">
+                    <img src="img/jewellery-women-two.svg" alt="Big picture with a woman">
                 </div>
             </div>
         </div>
@@ -477,7 +479,6 @@
                 <span class="cell color-red-block"></span>
                 <span class="cell"></span>
             </div>
-
         </div>
         <div class="example-block-example">
             <div class="example-container">
@@ -508,7 +509,6 @@
         </div>
     </div>
 </main>
-</body>
 <footer>
     <div class="footer-title">
         <h6>
@@ -516,4 +516,5 @@
         </h6>
     </div>
 </footer>
+</body>
 </html>
