--- a/lesson-7/index.html
+++ b/lesson-7/index.html
@@ -52,7 +52,7 @@
                     use. If you'd like to use any specific image, you can check the licenses and download the images for
                     free on Unsplash, Pexels.
                 </p>
-                <div class="licencing-content-text color">
+                <div class="licencing-content-text-with color">
                     <h4>
                         Pexels: <span>License</span>
                     </h4>
